src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Allure_SAP_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employee&apos;s SAP Number for Sales Org 2050 (Allure).</inlineHelpText>
        <label>Allure SAP User #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_SAP_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employee&apos;s SAP Number for Sales Org 2110 (Altair).</inlineHelpText>
        <label>Altair SAP User #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_Agent_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Tracking Agent ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Desk_Location__c</fullName>
        <label>Desk Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DialSource__DS_Technical_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DS Technical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DialSource__DialSource_Development_Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DialSource Development Endpoint</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__DialSource_Development_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to use the development server.</description>
        <label>DialSource Development Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DialSource__DialSource_Minimize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DialSource Minimize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DialSource__DialSource_Testing_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DialSource Testing Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name_Last_Initial__c</fullName>
        <formula>FirstName + &quot; &quot; + TRIM(LEFT(  LastName  , 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name Last Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gat_Formula_for_Approval_Process__c</fullName>
        <formula>MarketingID__c + &apos;;&apos; +  MarketingID2__c</formula>
        <label>Gat Formula for Approval Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Start__c</fullName>
        <formula>TEXT(StartDay)</formula>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_SAP_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employee&apos;s SAP Number for Sales Org 2010 (Marchon).</inlineHelpText>
        <label>Marchon SAP User #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingID2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional GAT Sales Territory Code</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GAT Sales Territory Code</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <label>Skill Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Fully Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Effective_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Effective Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Agent_Location__c</fullName>
        <label>Vision Care Agent Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <encryptionScheme>None</encryptionScheme>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsURL__c</fullName>
        <description>Optional url to the Qualtrics system.  A default url will be used if this is not specified.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QualtricsURL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsUserName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QualtricsUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>API_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>VSP Integration User</value>
        </filters>
        <label>API Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Chatter_Free_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>n</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Optics</value>
        </filters>
        <label>Active Chatter Free Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Chatter_Free_Users_in_Optics</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Chatter</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Optics</value>
        </filters>
        <label>Active Chatter Free Users in Optics</label>
    </listViews>
    <listViews>
        <fullName>Active_Licensed_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>VSP Optics Group</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Columbus</value>
        </filters>
        <label>Active Licensed Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Licensed_Users_First_Name</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Tracy</value>
        </filters>
        <label>Active Licensed Users_First Name</label>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users_First_Name</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Lori</value>
        </filters>
        <label>All Users - First Name</label>
    </listViews>
    <listViews>
        <fullName>Altair_Sales_Users</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 or 5)</booleanFilter>
        <columns>MANAGER</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Altair_SAP_Number__c</columns>
        <columns>MarketingID__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>IT</value>
        </filters>
        <label>Altair Sales Users</label>
    </listViews>
    <listViews>
        <fullName>Altair_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>MarketingID__c</columns>
        <columns>Altair_SAP_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Altair Users</label>
    </listViews>
    <listViews>
        <fullName>Client_Delivery_Email_to_Case_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>VSP Membership Coordination User</value>
        </filters>
        <label>Client Delivery Email to Case Users</label>
    </listViews>
    <listViews>
        <fullName>Customer_Care</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>VSP Customer Care</value>
        </filters>
        <label>Customer Care</label>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Lab_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>VSP Customer Support + Lab User</value>
        </filters>
        <label>Customer Support + Lab Users</label>
    </listViews>
    <listViews>
        <fullName>Eyeconic_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Eyeconic</value>
        </filters>
        <label>Eyeconic Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>VSPR28_Allow_Department_Update</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Department) 
	
	&amp;&amp;
	
$Permission.Manage_User_Department = FALSE</errorConditionFormula>
        <errorMessage>You cannot make updates to the Department field. Please contact your LOB Admin for further assistance.</errorMessage>
    </validationRules>
</CustomObject>